--- a/kanji.cabal
+++ b/kanji.cabal
@@ -17,8 +17,8 @@ cabal-version:       >=1.10
 
 executable kanji
   main-is:             Random.hs
-  -- other-modules:       
+  other-modules:       Shuffle
   -- other-extensions:    
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base >=4.10 && <4.11, random, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
