--- a/kanji.cabal
+++ b/kanji.cabal
@@ -14,7 +14,6 @@ executable kanji
   other-modules:       
       HelloApi
   -- other-extensions:    
-  build-depends:       base >=4.10 && <4.11
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -pgmL markdown-unlit
@@ -37,18 +36,5 @@ executable kanji
     , transformers
     , wai
     , warp
-  build-depends:
-      servant
+    , servant
     , servant-server
-    , servant-client
-    , servant-docs
-  build-depends:
-      blaze-html   >= 0.9.0.1 && < 0.10
-    , blaze-markup >= 0.8.0.0 && < 0.9
-    , cookie       >= 0.4.3   && < 0.5
-    , js-jquery    >= 3.2.1   && < 3.3
-    , lucid        >= 2.9.9   && < 2.10
-    , mtl-compat   >= 0.2.1   && < 0.3
-    , random       >= 1.1     && < 1.2
-    , servant-js   >= 0.9     && < 0.10
-    , time         >= 1.4.2   && < 1.9
